Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24423

Initial size of a QMainWindow with an unified title and toolbar where the toolbar is hidden is not correct as the toolbar area is too big

    XMLWordPrintable

Details

    Description

      Initial size of a QMainWindow with an unified title and toolbar where the toolbar is hidden is not correct as the toolbar area is too big. Example attached reproduces this problem.

      Attachments

        1. main.cpp
          0.4 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-24423
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes