Fix initial size of QMainWindow with unified title and toolbar on Mac

On Mac if the toolbar was hidden in a unified title and toolbar main
window then it would have too much space between the title and the
central widget.

Task-number: QTBUG-24423
Change-Id: I5e434da2447f33795f3771e43b42930824482d8e
Reviewed-by: Morten Johan Sørvig <morten.sorvig@nokia.com>